[project]
name = "mcp-authflow"
version = "0.2.0"
description = "OAuth 2.0 Authorization Server framework for MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brooks McMillin" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.13.0",
    "mcp>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "starlette>=0.40.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.31.0"]

[project.urls]
Homepage = "https://github.com/brooksmcmillin/mcp-authflow"
Documentation = "https://github.com/brooksmcmillin/mcp-authflow#readme"
Repository = "https://github.com/brooksmcmillin/mcp-authflow"
Issues = "https://github.com/brooksmcmillin/mcp-authflow/issues"

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "pyright>=1.1.400",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_authflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DTZ"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
